--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,6 @@
 *{
+    display: grid;
     box-sizing: border-box;
-}
-nav{
-    padding: 0px;
-    margin: 0px;
-    border: 100px;
-    border-color: aqua;
 }
 body{
     display: grid;
