--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     display: grid;
     box-sizing: border-box;
 }
+#nav{
+    display: grid;
+    grid-template-columns: auto, auto, auto, auto, auto, auto;
+    grid-column-start: 1;
+}
 body{
     display: grid;
     background-color: black;
