--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,11 @@ nav{
     display: grid;
     grid-template-columns: auto, auto, auto, auto, auto, auto;
 }
-body{
-    display: grid;
-    background-color: black;
+nav a{
+    text-align: center;
+    padding: 10px;
+    border: 1px solid black;
 }
 p{
-    color: white;
-}
-a{
-    width: 200px;
+    color: black;
 }
