--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
 }
 nav{
     display: grid;
-    grid-template-columns: auto, auto, auto, auto, auto, auto;
+    grid-template-columns: auto auto auto auto auto auto;
 }
 nav a{
     text-align: center;
     padding: 10px;
     border: 1px solid black;
+    background-color: aquamarine;
 }
 p{
     color: black;
