--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ nav a{
     border: 1px solid black;
     background-color: aquamarine;
 }
+body{
+    background-image: "Images/Galaxy.jpg";
+}
 p{
     color: black;
 }
