--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,21 @@ nav{
 nav a{
     text-align: center;
     padding: 10px;
-    border: 1px solid black;
-    background-color: aquamarine;
+    border: 1px solid purple;
+    border-width: medium;
+    background-color: black;
+    color: purple;
 }
-body{
-    background-image: "Images/Galaxy.jpg";
+#container{
+    display: grid;
+    grid-template-columns: 20% auto 20%;
+    background-color: black;
+    padding: 20px;
+}
+.text{
+    grid-column-start: 2;
 }
 p{
-    color: black;
+    color: rgb(59, 187, 219);
+    text-size-adjust: 22;
 }
