--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 nav{
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
 }
 nav a{
     text-align: center;
